# haskell-elm-todo-app

./: .gitignore  LICENSE  README.md  scotty-meets-elm.cabal  stack.yaml
client/: .gitignore  elm-package.json  elm.json  index.html  package.json  webpack.config.js
client/src/: Api.elm  Main.elm  Model.elm  Update.elm  View.elm  app.css  index.css  index.html  index.js  styles.css
client/src/App/: State.elm  Types.elm  View.elm  styles.css
client/src/Todo/: Api.elm  Model.elm  NewTodo.elm  State.elm  Todo.elm  Types.elm  Update.elm  View.elm  styles.css
client/src/Todos/: Api.elm  Model.elm  State.elm  Todos.elm  Types.elm  Update.elm  View.elm  styles.css
server/: .gitignore  LICENSE  haskell-elm-todo-app.cabal  package.yaml  scotty-meets-elm.cabal  stack.yaml
server/app/: Main.hs
server/src/: Api.hs  App.hs  Example.hs  Main.hs  Models.hs
server/test/: AppSpec.hs  Spec.hs
