name:                haskell-elm-todo-app
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sectore/haskell-elm-todo-app#readme
license:             MIT
license-file:        ../LICENSE
author:              Jens Krause
maintainer:          email@jkrause.io
copyright:           2016 Jens Krause
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable haskell-elm-todo-app
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Api
                     , App
                     , Models
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , exceptions
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , resourcet
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , transformers
                     , wai
                     , wai-cors
                     , warp
  default-language:    Haskell2010

test-suite haskell-elm-todo-app-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  other-modules:       AppSpec
                     , Models
                     , Api
                     , App
  build-depends:       base
                     , exceptions
                     , bytestring
                     , monad-logger
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , QuickCheck
                     , warp
                     , wai
                     , wai-extra
                     , wai-cors
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , resourcet
                     , servant
                     , servant-server
                     , servant-client
                     , string-conversions
                     , text
                     , http-client
                     , mockery
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sectore/haskell-elm-todo-app
