name:                scotty-meets-elm
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sectore/scotty-meets-elm#readme
license:             MIT
license-file:        LICENSE
author:              Jens Krause
maintainer:          email@jkrause.io
copyright:           2016 Jens Krause
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Example
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
  default-language:    Haskell2010

executable scotty-meets-elm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty-meets-elm
  default-language:    Haskell2010

test-suite scotty-meets-elm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scotty-meets-elm
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sectore/scotty-meets-elm
